--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,8 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{ye2025fsda,
+  title={FSDA-DG: Improving cross-domain generalizability of medical image segmentation with few source domain annotations},
+  author={Ye, Zanting and Wang, Ke and Lv, Wenbing and Feng, Qianjin and Lu, Lijun},
+  journal={Medical Image Analysis},
+  pages={103704},
+  year={2025},
+  publisher={Elsevier}
 }
